--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -30,8 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
+        working-directory: ./client
         uses: actions/checkout@v3
       - name: Detect package manager
+        working-directory: ./client
         id: detect-package-manager
         run: |
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
@@ -49,11 +51,13 @@ jobs:
             exit 1
           fi
       - name: Setup Node
+        working-directory: ./client
         uses: actions/setup-node@v3
         with:
           node-version: "16"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
+        working-directory: ./client
         uses: actions/configure-pages@v3
         with:
           # Automatically inject basePath in your Next.js configuration file and disable
@@ -62,6 +66,7 @@ jobs:
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
       - name: Restore cache
+        working-directory: ./client
         uses: actions/cache@v3
         with:
           path: |
@@ -72,12 +77,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
+        working-directory: ./client
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
+        working-directory: ./client
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Static HTML export with Next.js
+        working-directory: ./client
         run: ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Upload artifact
+        working-directory: ./client
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./out
