--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,18 +27,18 @@ jobs:
           npm install
           npm run lint
 
-  lint-server:
-    name: Lint Server
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
-      - name: Use NodeJS v18.14.2
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.14.2
-      - name: Install Dependencies and lint
-        run: |
-          cd server
-          npm install
-          npm run lint
+  # lint-server:
+  #   name: Lint Server
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout the repository
+  #       uses: actions/checkout@v3
+  #     - name: Use NodeJS v18.14.2
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18.14.2
+  #     - name: Install Dependencies and lint
+  #       run: |
+  #         cd server
+  #         npm install
+  #         npm run lint
