added npm run build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Export static files
         run: |
           cd client
+          npm run build
           npm run export
           mv out/404/index.html out/404.html
 
