--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,12 @@ name: Deploy to Production Environment
 # This workflow will trigger on any tag/release created on *any* branch
 # Make sure to create tags/releases only from the "master" branch for consistency
 on:
-  release:
-    types: [published]
+  push:
+    branches-ignore:
+      - master
+      - dev
+  # release:
+  #   types: [published]
 
 jobs:
   lint-client:
