--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -8,13 +8,14 @@ on:
       - main
   # release:
   #   types: [published]
-
+env:
+  
 jobs:
   lint-client:
     name: Lint and Export client
     runs-on: ubuntu-latest
-    # env:
-    #   NEXT_PUBLIC_BASE_PATH: ${{ secrets.NEXT_PUBLIC_BASE_PATH }}
+    env:
+      NEXT_PUBLIC_BASE_PATH: ${{ secrets.NEXT_PUBLIC_BASE_PATH }}
     #   NEXT_PUBLIC_BASE_API_URL: ${{ secrets.NEXT_PUBLIC_BASE_API_URL_PROD }}
     #   BASE_API_URL: ${{ secrets.BASE_API_URL }}
     #   NEXT_PUBLIC_FIREBASE_WEB_API_KEY: ${{ secrets.FIREBASE_WEB_API_KEY_PROD }}
