--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "node": true,
+    "browser": true,
+    "es6": true
+  },
+  "extends": "next/core-web-vitals",
+  "plugins": [
+     "eslint-plugin-react", "eslint-plugin-react-hooks"
+  ],
+  "rules": {
+     "indent": ["error", 2],
+     "linebreak-style": ["error", "unix"],
+     "quotes": ["error", "single"],
+     "semi": ["error", "never"],
+     "no-unused-vars": "error",
+     "no-undef": "error",
+     "no-trailing-spaces": "error",
+     "no-console": ["error", { "allow": ["error"] }]
+  }
 }
